issue-783: фикс text-align

--- a/src/ActionsDropdown/ActionsDropdown.scss
+++ b/src/ActionsDropdown/ActionsDropdown.scss
@@ -64,6 +64,7 @@ $kit-actions-dropdown-padding: 15px;
 	position: absolute;
 	top: -10px;
 	z-index: 2;
+	text-align: left;
 	min-width: 106px;
 	border-radius: 4px;
 	overflow: hidden;
